--- a/i3/config
+++ b/i3/config
@@ -15,6 +15,8 @@
 
 ################# Define the $mod variable/key
 
+# Key to rule them all : Super(Windows) or Alt key - see definition above
+# set Super key
 set $mod Mod4
 
 ################# Define the movements keys - variables
@@ -24,7 +26,7 @@ set $mod Mod4
 set $up l
 set $down k
 set $left j
-set $right semicolon 
+set $right semicolon
 
 ################# Single and Dual screen
 
@@ -37,14 +39,14 @@ set $firstMonitor DisplayPort-0
 set $secondMonitor DisplayPort-1
 
 workspace 1 output $firstMonitor
-workspace 2 output $firstMonitor
+workspace 2 output $secondMonitor
 workspace 3 output $firstMonitor
-workspace 4 output $firstMonitor
+workspace 4 output $secondMonitor
 workspace 5 output $firstMonitor
 workspace 6 output $secondMonitor
-workspace 7 output $secondMonitor
+workspace 7 output $firstMonitor
 workspace 8 output $secondMonitor
-workspace 9 output $secondMonitor
+workspace 9 output $firstMonitor
 workspace 10 output $secondMonitor
 
 # switch to workspace
@@ -74,14 +76,13 @@ bindsym $mod+Shift+0 move container to workspace 10; workspace 10
 ################# menu's in arcolinux
 
 # start dmenu
-bindsym $mod+shift+d exec --no-startup-id dmenu_run -i -nb '#191919' -nf '#fea63c' -sb '#fea63c' -sf '#191919' -fn 'NotoMonoRegular:bold:pixelsize=14'
-bindsym $mod+z exec rofi -show run
+#bindsym $mod+shift+d exec --no-startup-id dmenu_run -i -nb '#191919' -nf '#fea63c' -sb '#fea63c' -sf '#191919' -fn 'NotoMonoRegular:bold:pixelsize=14'
 
-# start rofi full
-bindsym $mod+F11 exec --no-startup-id "rofi -font 'Noto Sans 13' -theme-str 'window {width: 100%;height: 100%;}' -show drun"
+# run rofi default
+bindsym $mod+z exec rofi -show drun -hide-scrollbar -lines 5 -eh 2 -width 40 -location 8 -xoffset 150 -yoffset 70 -padding 50 -font "RobotoMono Nerd Font 14"
 
-# start rofi small
-bindsym $mod+F12 exec --no-startup-id rofi -show drun -font "Noto Sans 13"
+# run rofi favs
+bindsym $mod+Shift+d exec "/home/ibrahim/.config/scripts/rofifav.sh"
 
 ################# how to exit, logoff, suspend, ...
 
@@ -103,20 +104,23 @@ mode "$mode_system" {
     bindsym Escape mode "default"
 }
 
-################# reload changed configuration     
+# ArcoLinux Logout
+bindsym $mod+Shift+e exec --no-startup-id arcolinux-logout
+
+################# reload changed configuration
 
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # reload the configuration file
 bindsym $mod+Shift+c reload
 
-################# Stopping an application          
+################# Stopping an application
 
 # kill focused window
 bindsym $mod+Shift+q kill
 bindsym $mod+q kill
 
-################# Moving around in i3              
+################# Moving around in i3
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -148,7 +152,7 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-################# moving around workspaces         
+################# moving around workspaces
 
 # next/previous workspace
 
@@ -163,7 +167,7 @@ bindsym Mod1+Ctrl+Left workspace prev
 # switch to workspace with urgent window automatically
 for_window [urgent=latest] focus
 
-################# Tiling parameters                
+################# Tiling parameters
 
 # orientation for new workspaces
 default_orientation horizontal
@@ -193,7 +197,7 @@ bindsym $mod+a focus parent
 # focus the child container
 # bindsym $mod+d focus child
 
-################# resize  
+################# resize
 
 bindsym $mod+r mode "resize"
 
@@ -211,25 +215,37 @@ mode "resize" {
 
 }
 
-################# choose the font                  
+################# choose the font
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # choose your font
-font pango:inconsolata 13
-font-0 = FontAwesome5Free:style=Solid:pixelsize=15:antialias=false;3
+font pango:Roboto 13
 #font pango:Noto Mono Regular 13
 
 ################# autostart - execute applications at boot time
 
 # USER APPLICATIONS TO START AT BOOT
-exec "setxkbmap -layout us,ara"
-exec "setxkbmap -option 'grp:alt_shift_toggle'"
+
 # ArcoLinux Welcome App
 exec --no-startup-id dex $HOME/.config/autostart/arcolinux-welcome-app.desktop
 
 # Autotiling
 exec_always --no-startup-id autotiling
+
+# Browser
+# exec --no-startup-id vivaldi-stable
+for_window [class="firefox"] focus
+
+# Text-editor
+# exec --no-startup-id geany
+# exec --no-startup-id atom
+
+# File manager
+# exec --no-startup-id thunar
+
+# Mail clients
+# exec --no-startup-id evolution
 
 # Music
 # exec --no-startup-id spotify
@@ -247,7 +263,7 @@ exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 exec --no-startup-id pamac-tray
 
 # bluetooth
-exec --no-startup-id blueberry-tray
+# exec --no-startup-id blueberry-tray
 
 # network
 exec --no-startup-id nm-applet
@@ -262,8 +278,8 @@ exec_always --no-startup-id numlockx on
 # exec --no-startup-id insync start
 
 # volume
-exec --no-startup-id pasystray
-#exec --no-startup-id volumeicon
+# exec --no-startup-id pasystray
+exec --no-startup-id volumeicon
 
 # variety
 # exec --no-startup-id variety
@@ -278,9 +294,14 @@ exec --no-startup-id conky -c ~/.config/i3/system-overview
 exec --no-startup-id feh --bg-fill /usr/share/backgrounds/arcolinux/arco-wallpaper.jpg &
 
 # Polybar
-exec_always --no-startup-id ~/.config/polybar/launch.sh &
+exec_always --no-startup-id /home/ibrahim/.screenlayout/screenlayout.sh
+# exec_always --no-startup-id polybar top &
+# exec_always --no-startup-id polydock
 
-################# system applications       
+# Disable X bell
+exec --no-startup-id xset -b
+
+################# system applications
 
 exec --no-startup-id xfce4-power-manager &
 # ommitted next line to get super key to bring up the menu in xfce and avoid error then in i3
@@ -288,7 +309,7 @@ exec --no-startup-id xfce4-power-manager &
 # exec --no-startup-id xfsettingsd &
 exec --no-startup-id /usr/lib/xfce4/notifyd/xfce4-notifyd &
 
-################# applications keyboard shortcuts  
+################# applications keyboard shortcuts
 
 # not workspace related
 
@@ -304,8 +325,11 @@ bindsym control+mod1+Next exec --no-startup-id conky-rotate -n
 bindsym control+mod1+Prior exec --no-startup-id conky-rotate -p
 
 # terminal
-bindsym $mod+Return exec --no-startup-id i3-sensible-terminal;focus
-bindsym $mod+braceright exec $HOME/.config/i3/scripts/openTerminalSameDir.sh
+bindsym $mod+Return exec --no-startup-id terminator;focus
+bindsym $mod+KP_Enter exec --no-startup-id terminator;focus
+bindsym control+mod1+t exec --no-startup-id terminator; focus
+bindsym control+mod1+Return exec --no-startup-id terminator; focus
+bindsym control+mod1+KP_Enter exec --no-startup-id terminator; focus
 bindsym F12 exec --no-startup-id xfce4-terminal --drop-down; focus
 
 # System monitor
@@ -314,8 +338,8 @@ bindsym control+Shift+Escape exec --no-startup-id xfce4-taskmanager;focus
 # settings
 bindsym control+mod1+m exec --no-startup-id xfce4-settings-manager
 
-# code
-bindsym control+mod1+c exec --no-startup-id code;focus
+# catfish
+bindsym control+mod1+c exec --no-startup-id catfish;focus
 
 # arcolinux-logout
 bindsym control+mod1+k exec --no-startup-id arcolinux-logout
@@ -334,6 +358,10 @@ bindsym control+mod1+r exec --no-startup-id rofi-theme-selector
 # pavucontrol
 bindsym control+mod1+u exec --no-startup-id pavucontrol
 
+# start xfce-appfinder
+# arcolinux does not seem to work
+bindsym control+mod1+a exec --no-startup-id xfce4-appfinder
+
 # pamac-manager
 bindsym control+mod1+p exec --no-startup-id pamac-manager
 
@@ -344,7 +372,9 @@ bindsym --release $mod+Escape exec xkill
 # Browser
 bindsym $mod+F1 exec --no-startup-id exo-open --launch firefox;focus
 # qwerty/azerty conflict with w
-bindsym control+mod1+g exec --no-startup-id google-chrome-stable;focus
+bindsym control+mod1+f exec --no-startup-id firefox;focus
+bindsym control+mod1+v exec --no-startup-id vivaldi-stable;focus
+bindsym control+mod1+g exec --no-startup-id chromium;focus
 
 # Text Editor
 # bindsym $mod+F2 exec --no-startup-id geany;focus
@@ -364,7 +394,7 @@ bindsym control+mod1+i exec --no-startup-id nitrogen;focus
 bindsym $mod+F6 exec --no-startup-id vlc;focus
 
 # virtual machine
-bindsym $mod+F7 exec --no-startup-id virt-manager;focus
+bindsym $mod+F7 exec --no-startup-id virtualbox;focus
 
 # file management
 for_window [class="Thunar"] focus
@@ -374,20 +404,22 @@ bindsym $mod+Shift+KP_Enter exec --no-startup-id thunar;focus
 bindsym control+mod1+b exec --no-startup-id thunar;focus
 
 # mail application
-bindsym $mod+F9 exec --no-startup-id mailspring;focus
+bindsym $mod+F9 exec --no-startup-id evolution;focus
+# bindsym $mod+F9 exec --no-startup-id geary;focus
+# bindsym control+mod1+e exec --no-startup-id geary;focus
 
 # music
 bindsym $mod+F10 exec --no-startup-id spotify;focus
+bindsym control+mod1+s exec --no-startup-id spotify;focus
 
-################# screenshots                      
+################# screenshots
 
-#bindsym Print exec --no-startup-id scrot 'ArcoLinux-%Y-%m-%d-%s_screenshot_$wx$h.jpg' -e 'mv $f $$(xdg-user-dir PICTURES)'
-bindsym Print exec scrot $HOME/Images/`date +%Y-%m-%d_%H:%M:%S`.png
+bindsym Print exec --no-startup-id scrot 'ArcoLinux-%Y-%m-%d-%s_screenshot_$wx$h.jpg' -e 'mv $f $$(xdg-user-dir PICTURES)'
 bindsym Control+Print exec --no-startup-id xfce4-screenshooter
 bindsym Control+Shift+Print exec --no-startup-id gnome-screenshot -i
 # bindsym shift+Print exec --no-startup-id shutter
 
-################# floating or tiled rules         
+################# floating or tiled rules
 
 # floating enabled from some programs - find with xprop
 
@@ -434,14 +466,14 @@ for_window [window_role="pop-up"] floating enable
 for_window [window_role="^Preferences$"] floating enable
 for_window [window_role="setup"] floating enable
 
-################# give focus to applications       
+################# give focus to applications
 
 for_window [class="Gnome-terminal"] focus
 for_window [class="Termite"] focus
 for_window [class="Terminator"] focus
 for_window [class="Urxvt"] focus
 
-################# variety for wallpapers      
+################# variety for wallpapers
 
 # Variety keybindings mod1 = ALT
 # trash wallpaper
@@ -470,7 +502,7 @@ bindsym mod1+Shift+t exec --no-startup-id variety -t && wal -i $(cat $HOME/.conf
 # Update Wallpaper
 bindsym mod1+Shift+u exec --no-startup-id wal -i $(cat $HOME/.config/variety/wallpaper/wallpaper.jpg.txt)
 
-################# audio settings                   
+################# audio settings
 
 bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer -D pulse sset Master '5%+'"
 bindsym XF86AudioLowerVolume exec --no-startup-id "amixer -D pulse sset Master '5%-'"
@@ -485,17 +517,17 @@ bindsym XF86AudioStop exec --no-startup-id playerctl stop
 # bindsym XF86AudioPrev exec --no-startup-id "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous"
 # bindsym XF86AudioStop exec --no-startup-id "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Stop"
 
-################# xbacklight                       
+################# xbacklight
 
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 20 # increase screen brightness
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 20 # decrease screen brightness
 
-################# bar toggle                       
+################# bar toggle
 
 # bar toggle, hide or show
 bindsym $mod+b bar mode toggle
 
-################# border control                   
+################# border control
 
 # Border control
 hide_edge_borders both
@@ -515,12 +547,12 @@ new_window normal
 new_float normal
 # new_float none
 
-################# Popups  control                  
+################# Popups  control
 
 # Popups during fullscreen mode
 popup_during_fullscreen smart
 
-################# i3 gaps next                     
+################# i3 gaps next
 
 # Settings for I3 next gap git
 # https://github.com/Airblader/i3/tree/gaps-next
@@ -533,7 +565,7 @@ gaps outer 5
 # smart_gaps on
 # smart_borders on
 
-################# i3 gaps change                   
+################# i3 gaps change
 
 set $mode_gaps Gaps: (o) outer, (i) inner
 set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
@@ -572,24 +604,25 @@ mode "$mode_gaps_outer" {
         bindsym Escape mode "default"
 }
 
-################# picom of i3wm                  
+################# picom of i3wm
 
 # if you want transparency on non-focused windows, ...
-exec_always --no-startup-id picom --config ~/.config/i3/picom.conf
+exec_always --no-startup-id picom -b
+#exec --no-startup-id compton -b
+exec --no-startup-id redshift
+#bindsym control+mod1+o exec --no-startup-id ~/.config/i3/scripts/picom-toggle.sh
 
-bindsym control+mod1+o exec --no-startup-id ~/.config/i3/scripts/picom-toggle.sh
-
-################# bar appearance                   
+################# bar appearance
 
 bar {
-    height 25
-    workspace_buttons yes
-	font pango:Noto Sans 14
-    
-	# position top
-    position bottom
+    # height 25
+    # workspace_buttons yes
+    # font pango:Noto Sans 14
 
-	# system icons
+    # position top
+    # position bottom
+
+    # system icons
     # tray_output none
     # tray_output $firstMonitor
     # tray_output $secondMonitor
@@ -600,8 +633,8 @@ bar {
     # you will get the standard i3status bar
     # Second one is the standard statusbar with my personal settings
 
-	# status_command i3status
-    status_command i3status -c ~/.config/i3/i3status.conf
+    # status_command i3status
+    # status_command i3status -c ~/.config/i3/i3status.conf
 
     # OPTION 2 : i3blocks
 
@@ -632,36 +665,85 @@ bar {
     # in order for the system trayicons to show up in polybar
 
     ##START THEMING BAR
-    # Theme name : ArcoLinux Default
+    #Theme name : ArcoLinux Sunset
 
     # i3 bar colors
     # variable border background Text
 
-    colors {
-        background #2F2F2F
-        statusline #eeeeee
-        separator  #666666
+    # colors {
+        # background #2F2F2F
+        # statusline #eeeeee
+        # separator  #666666
 
         # colorclass           border  backgr. text
-        focused_workspace     #a9a9a9 #5f676a #eeeeee
-        active_workspace      #a9a9a9 #5f676a #eeeeee
-        inactive_workspace    #a9a9a9 #222222 #a9a9a9
-        urgent_workspace      #a9a9a9 #d42121 #FFFFFF
-        }
+        # focused_workspace     #a9a9a9 #5f676a #eeeeee
+        # active_workspace      #a9a9a9 #5f676a #eeeeee
+        # inactive_workspace    #a9a9a9 #222222 #a9a9a9
+        # urgent_workspace      #a9a9a9 #e82951 #FFFFFF
+        # }
 
     }
     ##STOP THEMING BAR
 
     ##START THEMING WM
-    # Theme name : ArcoLinux Default
+    #Theme name : ArcoLinux Sunset
 
     # Window color settings
     # class                 border  backgr. text    indicator
-    client.focused          #6790EB #6790EB #e5e5e5 #6790EB
+    client.focused          #FFAF00 #FFAF00 #333333 #FFAF00
     client.unfocused        #222222 #222222 #aaaaaa #222222
-    client.focused_inactive #222222 #222222 #a9a9a9 #222222
+    client.focused_inactive #222222 #222222 #aaaaaa #222222
     client.placeholder      #222222 #222222 #aaaaaa #222222
-    client.urgent           #d42121 #d42121 #f7f7f7 #d42121
+    client.urgent           #d42121 #d42121 #ffffff #d42121
 
     client.background       #242424
 
+    ##STOP THEMING WM
+
+######################################## THE END
+
+################# Scratchpad
+
+# NOT USED
+
+# move the currently focused window to the scratchpad
+bindsym $mod+shift+x move scratchpad
+
+# Show the next scratchpad window or hide the focused scratchpad window.
+# If there are multiple scratchpad windows, this command cycles through them.
+bindsym $mod+x scratchpad show
+
+################# mouse settings in i3
+
+# NOT USED
+
+# mouse settings
+# The middle button over a titlebar kills the window
+# bindsym --release button2 kill
+
+# The middle button and a modifer over any part of the window kills the window
+# bindsym --whole-window $mod+button2 kill
+
+# The right button toggles floating
+# bindsym button3 floating toggle
+# bindsym $mod+button3 floating toggle
+
+# The side buttons move the window around
+# bindsym button9 move left
+# bindsym button8 move right
+
+################# keyboard control
+
+# NOT USED
+
+# Settings of arcolinux will be applied
+exec --no-startup-id setxkbmap ara
+exec --no-startup-id setxkbmap us
+exec --no-startup-id setxkbmap -option 'grp:alt_shift_toggle'
+
+################# unclutter
+
+# NOT USED
+
+# get the mouse out of the way with unclutter
+# exec --no-startup-id unclutter
